# LazerShark

./: .dockerignore  .gitignore  LICENSE  README.md  makefile
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
doc/: coord_convention.md  repoSetup.md  style_guide_python.md
setup/: .dockerignore  Dockerfile  devbox.yaml
setup/roles/common/tasks/: main.yaml
setup/roles/ros/tasks/: main.yaml
src/lazershark/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lazershark/auv/sensors/: a50.py  naviguider.py  targetpoint.py
src/lazershark/launch/: auv.launch.py
src/lazershark/resource/: static_component_tf2.json
src/lazershark/sensors/: test.cpp  test_subscriber.py
src/lazershark/test/: test_flake8.py  test_pep257.py  test_quaternion_utils.py
src/lazershark/utils/: json_tf2_parser.py  quaternion_utils.py
